Fix Vercel deployment config
Fix Vercel deployment config

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,9 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "framework": "vite",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": null,
   "headers": [
     {
       "source": "/sw.js",
