--- a/src/package.json
+++ b/src/package.json
@@ -3,24 +3,28 @@
   "version": "1.0.0",
   "description": "AI 기반 맞춤형 여행 추천 PWA",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy:vercel": "vercel --prod",
-    "deploy:netlify": "netlify deploy --prod"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "latest",
-    "recharts": "latest",
-    "motion": "latest",
-    "@supabase/supabase-js": "latest"
+    "lucide-react": "^0.378.0",
+    "recharts": "^2.12.0",
+    "motion": "^10.18.0",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.0",
-    "typescript": "^5.3.3"
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
