--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,7 +1,7 @@
 {
-  "framework": "vite",
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "installCommand": "npm install",
   "headers": [
     {
       "source": "/sw.js",
