--- a/src/package.json
+++ b/src/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "vercel-build": "vite build"
+    "build": "vite build && ls -la dist/",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
