--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && ls -la dist/",
+    "build": "vite build && echo 'Build completed! Checking dist folder...' && ls -la dist/ && echo 'dist folder contents listed successfully!'",
     "preview": "vite preview"
   },
   "dependencies": {
