--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview --port 4173",
+    "pwa:test": "vite build && vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
