--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -2,7 +2,7 @@
 
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = "build"
 
 # Redirect all routes to index.html for SPA
 [[redirects]]
