--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -4,17 +4,25 @@
   command = "npm run build"
   publish = "build"
 
+# Force clear page - bypass SPA redirect
+[[redirects]]
+  from = "/force-clear"
+  to = "/force-clear.html"
+  status = 200
+
 # Redirect all routes to index.html for SPA
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Headers for PWA files
+# Headers for PWA files - NO CACHE for Service Worker
 [[headers]]
   for = "/sw.js"
   [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
     Service-Worker-Allowed = "/"
 
 [[headers]]
